# sys-monitor-qt6

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  process.h  processor.h  system.h  systemmonitor.h
src/: mainwindow.cpp  process.cpp  processor.cpp  system.cpp  systemmonitor.cpp
